Closed Bug 342227 Opened 19 years ago Closed 19 years ago

bind/@relevant fails to apply to attribute serialization

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Leigh.Klotz, Assigned: aaronr)

References

Details

(Keywords: fixed1.8.0.8, fixed1.8.1.1)

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4 <bind nodeset="/path/to/@attribute" relevant="false()" /> fails to inhibit serialization of the specified attribute. Reproducible: Always Steps to Reproduce: See attached testcase which shows that attribute notes with relevant=false() are serialized, but element nodes with relevant=false() are not.
Spec reference http://www.w3.org/TR/xforms/slice11.html#submit-event bullet item 1: Any node which is considered not relevant as defined in "6.1.4 The relevant Property" is removed.
When relevant is attached to an attribute, it still shows up in submission. When relevant is attached to an element, it does not show up in submission.
Status: UNCONFIRMED → NEW
Ever confirmed: true
this can probably be fixed somewhere between nsXFormsSubmissionElement::CopyChildren or nsXFormsModelElement::HandleInstanceDataNode
Blocks: 326372
Attached file testcase updated
Updated testcase text to be more descriptive
Attachment #226429 - Attachment is obsolete: true
Attached patch patchSplinter Review
Attachment #227394 - Flags: review?(Olli.Pettay)
Attachment #227394 - Flags: review?(doronr)
Status: NEW → ASSIGNED
Assignee: xforms → aaronr
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
Attachment #227394 - Flags: review?(doronr) → review+
Attachment #227394 - Flags: review?(Olli.Pettay) → review+
checked into trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8.0 branch on 2006/09/21
Flags: blocking1.7.14?
Keywords: fixed1.8.0.8
Flags: blocking1.7.14?
checked into 1.8 branch on 2006/11/21
Keywords: fixed1.8.1.1
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: