[XForms] irrelevant attributes being submitted. Bug 342227, r=doronr+olli